<?xml version="1.0"?>
<package>
  <name>p3dx_dpl</name>
  <version>0.0.0</version>
  <description>The p3dx_dpl package</description>

  <maintainer email="lukas.jelinek1@gmail.com">Lukas Jelinek</maintainer>
  <maintainer email="laeqten@gmail.com">Jiri Horner</maintainer>
  <license>MIT</license>
  <url>http://www.ros.org/wiki/p3dx_dpl</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>p3dx_hal_vrep</run_depend>
  <run_depend>robot_localization</run_depend>
</package>
