<?xml version="1.0"?>
<package>
  <name>p3dx_hal_vrep</name>
  <version>0.0.0</version>
  <description>The p3dx_hal_vrep package</description>

  <maintainer email="laeqten@gmail.com">Jiri Horner</maintainer>
  <maintainer email="lukas.jelinek1@gmail.com">Lukas Jelinek</maintainer>
  <license>MIT</license>
  <url>http://www.ros.org/wiki/p3dx_hal_vrep</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vrep_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>p3dx_urdf_model</run_depend>
  <run_depend>vrep_common</run_depend>
</package>
