<?xml version="1.0"?>
<package>
  <name>p3dx_robot</name>
  <version>0.0.0</version>
  <description>The p3dx_robot package</description>

  <maintainer email="laeqten@gmail.com">Jiri Horner</maintainer>
  <license>MIT</license>
  <url>http://www.ros.org/wiki/p3dx_robot</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  
  <run_depend>p3dx_dpl</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>move_base</run_depend>
</package>
