<?xml version="1.0"?>
<package>
  <name>p3dx_urdf_model</name>
  <version>0.0.0</version>
  <description>The p3dx_urdf_model package</description>

  <maintainer email="lukas.jelinek1@gmail.com">Lukas Jelinek</maintainer>

  <url>http://www.ros.org/wiki/p3dx_urdf_model</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot_state_publisher</run_depend>
</package>